# msgspec-settings

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  test.py
docs/: index.html  msgspec_config.html  msgspec_settings.html  search.js  theme.css
examples/: server_config.py  server_config.toml
msgspec_config/: base.py  fields.py
msgspec_config/sources/: cli.py
msgspec_settings/: __init__.py  base.py  fields.py  mapping.py  merge.py  typing.py
msgspec_settings/sources/: __init__.py  api.py  cli.py  dotenv.py  env.py  json.py  toml.py  yaml.py
tests/: _models.py  test_base.py  test_fields.py  test_functions.py  test_sources_api.py  test_sources_cli.py  test_sources_dotenv.py  test_sources_env.py  test_sources_json.py  test_sources_toml.py  test_sources_yaml.py
