[project]
name = "msgspec-config"
version = "0.1.2"
description = "A Settings library using msgspec as a backend for validation and serialization."
readme = "README.md"
requires-python = ">=3.11"

keywords = ["Settings", "CLI", "Configuration", "Validation", "Serialization", "msgspec"]
authors = [
    {name = "Max Pareschi", email = "max.pareschi@gmail.com"}
]

classifiers = [
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries"
]

dependencies = [
    "msgspec>=0.20.0",
    "pyyaml>=6.0.3",
    "rich>=14.3.1",
    "rich-click>=1.9.6",
]

[project.urls]
Homepage = "https://github.com/maxpareschi/msgspec-config"
Issues = "https://github.com/maxpareschi/msgspec-config/issues"
Docs = "https://maxpareschi.github.io/msgspec-config"

[dependency-groups]
dev = [
    "pdoc>=16.0.0",
    "pyinstrument>=5.1.2",
    "pytest>=9.0.2",
    "ruff>=0.14.14",
]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["msgspec_config*"]
exclude = ["tests*"]
namespaces = false

[tool.pytest.ini_options]
testpaths = ["tests"]

